# den

./: .gitignore  .golangci.yml  .goreleaser.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  den.example.yaml  go.mod  go.sum  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml
cmd/den/: cli.go  debug.go  floor_test.go  guard.go  guard_ast_test.go  guard_test.go  hardening_test.go  main.go  mcp.go
docs/: 404.html  _config.yml  api-reference.md  architecture.md  cli.md  configuration.md  getting-started.md  index.html  index.md  mcp.md  robots.txt  sdk.md  site.config.js  sitemap.xml
docs/css/: style.css
docs/docs/: architecture.md  cli.md  configuration.md  installation.md  introduction.md  mcp.md  quick-start.md  rest-api.md  sdks.md
docs/js/: app.js
docs/zh-CN/: api-reference.md  architecture.md  cli.md  configuration.md  getting-started.md  index.md  mcp.md  sdk.md
images/default/: Dockerfile
internal/api/: server.go
internal/api/handlers/: common.go  exec.go  fs.go  port.go  s3.go  (+8 more)
internal/config/: config.go  config_test.go  configreflection_test.go
internal/dashboard/: dashboard.go
internal/engine/: engine.go  engine_test.go  memory.go  memory_darwin.go  memory_linux.go  pool.go  pressure.go  pressure_test.go  sandbox.go
internal/mcp/: server.go  tools.go
internal/pathutil/: pathutil.go  pathutil_test.go
internal/runtime/: runtime.go
internal/storage/: s3.go  s3_fuse.go  s3_ssrf_test.go  s3_test.go  storage.go  tmpfs.go  tmpfs_test.go  volume.go  volume_test.go
internal/store/: bolt.go  bolt_test.go  store.go
pkg/client/: client.go  client_feature_test.go  client_ports_test.go
plans/: fix-den-network-isolation-port-forwarding.md
scripts/: e2e-network.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/den/: __init__.py  client.py  exceptions.py  sandbox.py  types.py
sdk/python/tests/: test_feature_token.py
sdk/typescript/: README.md  package.json  tsconfig.json
tests/integration/: docker-compose.minio.yml  network_test.go  storage_test.go
(+25 files in other folders)
