[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "den"
version = "0.1.0"
description = "Python SDK for the Den sandbox API"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/den"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
