[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "den-sdk"
version = "0.0.6"
description = "Python SDK for the Den sandbox API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["den", "sandbox", "sdk", "docker", "ai", "code-execution"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/us/den"
Repository = "https://github.com/us/den"
Documentation = "https://github.com/us/den/tree/main/sdk/python"
Issues = "https://github.com/us/den/issues"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/den"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
